# assignment2b

./: CMakeLists.txt  README.md
ConsoleApp/: .gitignore  Activity.cpp  Activity.hpp  CMakeLists.txt  Driver.cpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  UploadClient.cpp  UploadClient.hpp
UploadServer/: CMakeLists.txt  HttpServlet.hpp  HttpServletRequest.hpp  HttpServletResponse.hpp  ServerSocket.cpp  ServerSocket.hpp  UploadServer.cpp  UploadServerThread.cpp  UploadServerThread.hpp  UploadServlet.cpp  UploadServlet.hpp  main.cpp
